@@ -74,6 +74,7 @@ SOURCE_GUI =
 	XSettingsClient.cpp
 	XSettingsManager.cpp
 	Window.cpp
+	WindowXid.cpp
 	ExpandableGroup.cpp
 	IconLoader.cpp
 	IconChooser.cpp 
